Fix: left-aligned FriendlyCaptcha on sign-in and sign-up pages

--- a/frontend/app/assets/css/tailwind.css
+++ b/frontend/app/assets/css/tailwind.css
@@ -311,3 +311,8 @@ MARK: Pulse
     opacity: 0.5;
   }
 }
+/* FriendlyCaptcha's override for left alignment. */
+.frc-captcha {
+  margin-left: 0 !important;
+  margin-right: auto !important;
+}
